--- a/sites/handbook/source/handbook/engineering/development/dev/manage/compliance/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/compliance/index.html.md.erb
@@ -23,6 +23,15 @@ title: "Compliance Group"
 * We do an optional, asynchronous daily stand-up in our respective group stand-up channels:
   * Govern:Compliance [#g_govern_compliance_daily](https://gitlab.slack.com/archives/C013E163FD0)
 
+#### Code Review
+
+Because this group works on components of the application that have a [far-reaching impact](/handbook/engineering/development/#reducing-the-impact-of-far-reaching-work), we take these extra steps in order to reduce our risk of a production incident:
+
+1. Our team's merge requests should be assigned to another Compliance team member for first review in order to build more institutional knowledge across the team.
+1. Compliance merge requests will clearly define  whether a feature flag is required. This is an effort to remind engineers about feature flag usage, but also to challenge reasoning as to why changes do not need to be behind a feature flag.
+1. If a feature flag is used then a feature flag [rollout plan](https://about.gitlab.com/handbook/engineering/development/processes/rollout-plans/) will be created. Support (`#support_gitlab-com`) will also be [notified](https://gitlab.com/gitlab-org/gitlab/-/blob/master/.gitlab/issue_templates/Feature%20Flag%20Roll%20Out.md?plain=1#L94) if necessary. 
+1. Compliance related merge requests require a review by a [Compliance Engineer](https://gitlab.com/groups/gitlab-org/govern/compliance/-/group_members?with_inherited_permissions=exclude). This is guarded by using the `CODEOWNERS` feature of GitLab.
+
 ### How we prioritize for a milestone
 We prioritize using the [cross-functional prioritization] (https://about.gitlab.com/handbook/product/cross-functional-prioritization/). The Product Manager will prioritize `type::feature` issues, the Engineering Manager will prioritize `type::maintenance` issues, and the Quality Manager will prioritize `type::bug` issues. From there, we are able to select a ratio of the top issues to be planned for the milestone by using our [cross-functional issue board](https://gitlab.com/groups/gitlab-org/-/boards/4657720?milestone_title=15.4&label_name[]=group%3A%3Acompliance). Our target ratio is to plan 60% features, 30% maintenance, and 10% bugs per milestone. The data below helps us understand our overall cross-functional status.
   
